@@ -11,8 +11,8 @@ var_dump(isset($_POST['foo']));
 var_dump(strlen(file_get_contents('php://input')));
 ?>
 --EXPECT--
-Warning: Unknown: Unable to create temporary file, Check permissions in temporary files directory. in Unknown on line 0
+Warning: PHP Request Startup: Unable to create temporary file, Check permissions in temporary files directory. in Unknown on line 0
 
-Warning: Unknown: POST data can't be buffered; all data discarded in Unknown on line 0
+Warning: PHP Request Startup: POST data can't be buffered; all data discarded in Unknown on line 0
 bool(false)
 int(0)
