@@ -16,6 +16,7 @@ PHP                                                                        NEWS
   . Fixed bug GH-8995 (WeakMap object reference offset causing TypeError).
     (Tobias Bachert)
   . Added error_log_mode ini setting. (Mikhail Galanin)
+  . Updated request startup messages. (Eric Norris)
 
 - COM:
   . Fixed bug GH-8750 (Can not create VT_ERROR variant type). (cmb)
